move apriltag_msgs into apriltag_ros to fit ros1 impl
Signed-off-by: Daisuke Nishimatsu <border_goldenmarket@yahoo.co.jp>

--- a/.github/build_and_test.yml
+++ b/.github/build_and_test.yml
@@ -43,6 +43,6 @@ jobs:
       - name: build and test
         uses: ros-tooling/action-ros-ci@master
         with:
-          package-name: apriltag_ros apriltag_msgs
+          package-name: apriltag_ros
           target-ros2-distro: ${{ matrix.ros_distribution }}
           vcs-repo-file-url: ""
