--- a/apriltag_ros/package.xml
+++ b/apriltag_ros/package.xml
@@ -26,15 +26,16 @@
   <author>Danylo Malyuta</author>
 
   <buildtool_depend>ament_cmake_auto</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
   <depend>apriltag</depend>
-  <depend>apriltag_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>image_transport</depend>
   <depend>image_geometry</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
   <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
   <depend>cv_bridge</depend>
   <depend>tf2_geometry_msgs</depend>
   <depend>tf2_ros</depend>
@@ -43,6 +44,8 @@
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
     <build_type>ament_cmake</build_type>
