--- a/apriltag_ros/package.xml
+++ b/apriltag_ros/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>apriltag_ros</name>
   <version>3.2.1</version>
   <description>
@@ -26,37 +26,25 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>apriltag</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>image_transport</build_depend>
-  <build_depend>image_geometry</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>message_generation</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>cv_bridge</build_depend>
-  <build_depend>tf</build_depend>
-  <build_depend>nodelet</build_depend>
-  <build_depend>pluginlib</build_depend>
-  <build_depend>eigen</build_depend>
-  <build_depend>libopencv-dev</build_depend>
-  <build_depend>cmake_modules</build_depend>
+  <depend>apriltag</depend>
+  <depend>geometry_msgs</depend>
+  <depend>image_transport</depend>
+  <depend>image_geometry</depend>
+  <depend>roscpp</depend>
+  <depend>sensor_msgs</depend>
+  <depend>message_generation</depend>
+  <depend>message_runtime</depend>
+  <depend>std_msgs</depend>
+  <depend>cv_bridge</depend>
+  <depend>tf</depend>
+  <depend>nodelet</depend>
+  <depend>pluginlib</depend>
+  <depend>eigen</depend>
+  <depend>libopencv-dev</depend>
+  <depend>cmake_modules</depend>
+  <depend>tf2</depend>
+  <depend>tf2_geometry_msgs</depend>
   
-  <run_depend>tf</run_depend>
-  <run_depend>apriltag</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>image_transport</run_depend>
-  <run_depend>image_geometry</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>message_runtime</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>cv_bridge</run_depend>
-  <run_depend>nodelet</run_depend>
-  <run_depend>pluginlib</run_depend>
-  <run_depend>eigen</run_depend>
-  <run_depend>libopencv-dev</run_depend>
-
   <export>
     <nodelet plugin="${prefix}/nodelet_plugins.xml" />
   </export>
