--- a/apriltag_ros/CMakeLists.txt
+++ b/apriltag_ros/CMakeLists.txt
@@ -1,158 +1,125 @@
-cmake_minimum_required(VERSION 3.0.2)
-project(apriltag_ros)
+cmake_minimum_required(VERSION 3.5)
+project(atlas_apriltag_ros)
 
-set(CMAKE_CXX_STANDARD 17)
+# Default to C99
+if(NOT CMAKE_C_STANDARD)
+  set(CMAKE_C_STANDARD 99)
+endif()
 
-find_package(catkin REQUIRED COMPONENTS
-  cmake_modules
-  cv_bridge
-  geometry_msgs
-  image_geometry
-  image_transport
-  message_generation
-  nodelet
-  pluginlib
-  roscpp
-  sensor_msgs
-  std_msgs
-  tf
-)
+# Default to C++14
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
 
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic -lgtest -lgmock -g)
+endif()
+
+# Find dependencies
+find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
+find_package(ageve_interfaces REQUIRED)
+find_package(cv_bridge REQUIRED)
+find_package(image_transport REQUIRED)
+find_package(rcutils REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(tf2_ros REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(apriltag REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(OpenCV REQUIRED)
-find_package(apriltag REQUIRED)
+find_package(yaml-cpp REQUIRED)
+find_package(image_geometry REQUIRED)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-# We default to 'Release' if none was specified
-IF(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
-  MESSAGE(STATUS "Setting build type to 'Release' as none was specified.")
-  SET(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the build type" FORCE)
-  SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Coverage" "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
-ENDIF()
 
-add_compile_options("-O3" "-funsafe-loop-optimizations" "-fsee" "-funroll-loops" "-fno-math-errno" "-funsafe-math-optimizations" "-ffinite-math-only" "-fno-signed-zeros")
 
-# Note: These options have been turned off to allow for binary releases - 
-# in local builds, they can be reactivated to achieve higher performance.
-# if("${CMAKE_SYSTEM_PROCESSOR}" MATCHES "x86_64" OR "x86_32")
-#   message("enabling msse2 for x86_64 or x86_32 architecture")
-#   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -msse2 ")
-# endif()
-# if("${CMAKE_SYSTEM_PROCESSOR}" MATCHES "arm")
-#   message("enabling -mfpu=neon -mfloat-abi=softfp for ARM architecture")
-#   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=armv7-a -mcpu=cortex-a9 -mfpu=neon -mtune=cortex-a9 -mvectorize-with-neon-quad -ffast-math ")
-# endif()
-
-add_message_files(
-  FILES
-  AprilTagDetection.msg
-  AprilTagDetectionArray.msg
-)
-
-add_service_files(
-  FILES
-  AnalyzeSingleImage.srv
-)
-
-generate_messages(
-  DEPENDENCIES
-  geometry_msgs
+set(dependencies
+  rclcpp
+  rclcpp_components
+  ageve_interfaces
+  cv_bridge
+  image_transport
+  rcutils
   sensor_msgs
-  std_msgs
+  tf2_ros
+  tf2
+  apriltag
+  Eigen3
+  OpenCV
+  image_geometry
+  yaml-cpp
+  geometry_msgs
 )
 
-# Extract the include directories and libraries from apriltag::apriltag as catkin_package() does not support modern cmake.
-get_target_property(apriltag_INCLUDE_DIRS apriltag::apriltag INTERFACE_INCLUDE_DIRECTORIES)
-get_target_property(apriltag_LIBRARIES apriltag::apriltag INTERFACE_LINK_LIBRARIES)
 
-catkin_package(
-  INCLUDE_DIRS
-    include
-    ${EIGEN3_INCLUDE_DIRS}
-  CATKIN_DEPENDS
-    cv_bridge
-    geometry_msgs
-    image_transport
-    message_runtime
-    nodelet
-    pluginlib
-    roscpp
-    sensor_msgs
-    std_msgs
-    tf
-  DEPENDS
-    apriltag
-    OpenCV
-  LIBRARIES
-    ${PROJECT_NAME}_common
-    ${PROJECT_NAME}_continuous_detector
-    ${PROJECT_NAME}_single_image_detector
+# Include directories
+include_directories(
+  include
 )
 
-###########
-## Build ##
-###########
+# create ament index resource which references the libraries in the binary dir
+set(node_plugins "")  
 
-include_directories(include
-  ${catkin_INCLUDE_DIRS}
-  ${EIGEN3_INCLUDE_DIRS}
-  ${OpenCV_INCLUDE_DIRS}
+
+
+# Add cpp libraries
+add_library(atlas_apriltag_ros_component SHARED
+  "src/continuous_detector.cpp"
+  "src/common_functions.cpp"
 )
 
-add_library(${PROJECT_NAME}_common src/common_functions.cpp)
-add_dependencies(${PROJECT_NAME}_common ${PROJECT_NAME}_generate_messages_cpp)
-target_link_libraries(${PROJECT_NAME}_common ${catkin_LIBRARIES} ${OpenCV_LIBRARIES} apriltag::apriltag)
+target_link_libraries(atlas_apriltag_ros_component yaml-cpp apriltag)
 
-add_library(${PROJECT_NAME}_continuous_detector src/continuous_detector.cpp)
-target_link_libraries(${PROJECT_NAME}_continuous_detector ${PROJECT_NAME}_common ${catkin_LIBRARIES})
+target_compile_definitions(atlas_apriltag_ros_component
+                           PRIVATE "COMPOSITION_BUILDING_DLL")
 
-add_library(${PROJECT_NAME}_single_image_detector src/single_image_detector.cpp)
-target_link_libraries(${PROJECT_NAME}_single_image_detector ${PROJECT_NAME}_common ${catkin_LIBRARIES})
+ament_target_dependencies(atlas_apriltag_ros_component
+                          rclcpp
+                          rclcpp_components
+                          ageve_interfaces
+                          cv_bridge
+                          image_transport
+                          rcutils
+                          sensor_msgs
+                          tf2_ros
+                          tf2
+                          apriltag
+                          Eigen3
+                          OpenCV
+                          image_geometry
+                          yaml-cpp
+                          geometry_msgs
+                          )
 
-add_executable(${PROJECT_NAME}_continuous_node src/${PROJECT_NAME}_continuous_node.cpp)
-add_dependencies(${PROJECT_NAME}_continuous_node ${PROJECT_NAME}_generate_messages_cpp)
-target_link_libraries(${PROJECT_NAME}_continuous_node ${PROJECT_NAME}_continuous_detector ${catkin_LIBRARIES})
+rclcpp_components_register_node(atlas_apriltag_ros_component PLUGIN "atlas_apriltag_ros::ContinuousDetector" EXECUTABLE ContinuousDetector)
+set(node_plugins "${node_plugins}atlas_apriltag_ros::ContinuousDetector;$<TARGET_FILE:atlas_apriltag_ros_component>\n")
 
-add_executable(${PROJECT_NAME}_single_image_server_node src/${PROJECT_NAME}_single_image_server_node.cpp)
-add_dependencies(${PROJECT_NAME}_single_image_server_node ${PROJECT_NAME}_generate_messages_cpp)
-target_link_libraries(${PROJECT_NAME}_single_image_server_node ${PROJECT_NAME}_single_image_detector ${catkin_LIBRARIES})
-
-add_executable(${PROJECT_NAME}_single_image_client_node src/${PROJECT_NAME}_single_image_client_node.cpp)
-add_dependencies(${PROJECT_NAME}_single_image_client_node ${PROJECT_NAME}_generate_messages_cpp)
-target_link_libraries(${PROJECT_NAME}_single_image_client_node ${PROJECT_NAME}_common ${catkin_LIBRARIES})
-
-
-#############
-## Install ##
-#############
-
-install(DIRECTORY include/${PROJECT_NAME}/
-  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-  FILES_MATCHING PATTERN "*.h"
-)
-
-install(DIRECTORY config launch
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
-install(FILES nodelet_plugins.xml
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-)
+# since the package installs libraries without exporting them
+# it needs to make sure that the library path is being exported
+if(NOT WIN32)
+  ament_environment_hooks(
+    "${ament_cmake_package_templates_ENVIRONMENT_HOOK_LIBRARY_PATH}")
+endif()
 
 install(TARGETS
-  ${PROJECT_NAME}_common
-  ${PROJECT_NAME}_continuous_detector
-  ${PROJECT_NAME}_continuous_node
-  ${PROJECT_NAME}_single_image_client_node
-  ${PROJECT_NAME}_single_image_detector
-  ${PROJECT_NAME}_single_image_server_node
-  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-)
+  atlas_apriltag_ros_component
+  DESTINATION lib/${PROJECT_NAME})
 
-install(PROGRAMS scripts/analyze_image DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+install(TARGETS atlas_apriltag_ros_component
+        EXPORT export_${PROJECT_NAME}
+        ARCHIVE DESTINATION lib
+        LIBRARY DESTINATION lib
+        RUNTIME DESTINATION bin
+        INCLUDES DESTINATION include
+        )
+
+
+install(DIRECTORY
+  config
+  launch
+  DESTINATION share/${PROJECT_NAME}
+) 
+
+ament_package()
