--- a/apriltag_ros/package.xml
+++ b/apriltag_ros/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>atlas_apriltag_ros</name>
+  <name>apriltag_ros</name>
   <version>0.0.0</version>
   <description>utils package</description>
   <maintainer email="support.idi@movvo.eu">
