--- a/apriltag_ros_interfaces/package.xml
+++ b/apriltag_ros_interfaces/package.xml
@@ -1,36 +1,26 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>apriltag_ros</name>
+  <name>apriltag_ros_interfaces</name>
   <version>0.0.0</version>
-  <description>utils package</description>
+  <description>TODO: Package description</description>
   <maintainer email="support.idi@movvo.eu">
         AlbertArla, 
         MartiBolet,
         BernatGaston,
         MariaMercade
   </maintainer>
+  <license>TODO: License declaration</license>
 
-  <license>Proprietary MOVVO ROBOTICS. All rights reserved</license> 
-  
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <buildtool_depend>ament_cmake_python</buildtool_depend> 
+  
+  <build_depend>rosidl_default_generators</build_depend>
 
-  <depend>rclcpp</depend>
-  <depend>rclcpp_components</depend>
-  <depend>apriltag_ros_interfaces</depend>
-  <depend>cv_bridge</depend>
-  <depend>image_transport</depend>
-  <depend>rcutils</depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
   <depend>sensor_msgs</depend>
-  <depend>tf2_ros</depend>
-  <depend>tf2</depend>
-  <depend>apriltag</depend>
-  <depend>eigen</depend>
-  <depend>OpenCV</depend>
-  <depend>image_geometry</depend>
   <depend>geometry_msgs</depend>
-  <depend>std_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
